--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "colors": "^1.4.0",
     "devenv": "^1.0.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "mongoose": "^6.6.3",
     "nodemon": "^2.0.20"
