--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "devenv": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "express-async-handler": "^1.2.0",
     "mongoose": "^6.6.3",
     "nodemon": "^2.0.20"
   }
